# NestCamera

./: .gitignore  CMakeLists.txt  README.md  get_video  mountpi.sh  pi_build
CMakeToolChain/: Toolchain-RaspberryPi.cmake
cameraAdapter/: cameraAdapter.cxx
cameraAdapter/include/cameraAdapter/: cameraAdapter.h
cameraFactory/: cameraFactory.cxx
cameraFactory/include/cameraFactory/: cameraFactory.h
imageAdapter/: imageAdapter.cxx
imageAdapter/include/imageAdapter/: imageAdapter.h
include/nestcamera/: cameraAdapter.h  cameraFactory.h
lib/raspicam/src/: CMakeLists.txt  raspicam.h
lib/raspicam/src/mocks/: mockRaspiCam.h
libfoo/: CMakeLists.txt  foo.cxx  foo.h
main/: main.cxx
raspiCamera/: CMakeLists.txt  raspiCamera.cpp
raspiCamera/include/raspiCamera/: raspiCamera.h
test/testcameraAdapter/: .gitignore  CMakeLists.txt  testcameraAdapter.cxx
test/testcameraAdapter/include/testcameraAdapter/: testcameraAdapter.h
test/testcameraFactory/: .gitignore  CMakeLists.txt  main.cxx  testcameraFactory  testcameraFactory.cxx
test/testfoo/: CMakeLists.txt  testfoo.cxx  testfoo.h
test/testimageAdapter/: CMakeLists.txt  main.cxx  testimageAdapter.cxx
test/testimageAdapter/include/testimageAdapter/: testimageAdapter.h
test/testtouchscreenAdapter/: CMakeLists.txt  testtouchscreenAdapter.cxx
test/testvideoAdapter/: CMakeLists.txt
touchscreenAdapter/include/touchscreenAdapter/: touchscreenAdapter.h
videoAdapter/include/videoAdapter/: videoAdapter.h
